--- a/lab2/WeatherStation/WeatherStation.vcxproj
+++ b/lab2/WeatherStation/WeatherStation.vcxproj
@@ -149,7 +149,7 @@
   <ItemGroup>
     <ClInclude Include="Observer.h" />
     <ClInclude Include="stdafx.h" />
-    <ClInclude Include="StreamBehaviors.h" />
+    <ClInclude Include="StatsCalculator.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="WeatherData.h" />
     <ClInclude Include="WeatherInfo.h" />
