--- a/lw4/composer.json
+++ b/lw4/composer.json
@@ -2,9 +2,12 @@
   "require": {
     "ext-readline": "*"
   },
+  "require-dev": {
+    "phpunit/phpunit": "^8"
+  },
   "autoload": {
     "psr-4": {
-      "app\\": "src/app",
+      "app\\": ["src/app", "tests/app"],
       "canvas\\": "src/canvas/",
       "client\\": "src/client/",
       "color\\": "src/color/",
