--- a/lw8/composer.json
+++ b/lw8/composer.json
@@ -6,12 +6,16 @@
     "psr-4": {
       "App\\": ["src/app", "tests/app"],
       "GumballMachine\\": ["src/gumball_machine", "tests/gumball_machine"],
+      "Command\\": ["src/command", "tests/command"],
+      "Command\\Exception\\": ["src/command/exception"],
+      "Menu\\": ["src/menu"],
       "NaiveGumballMachine\\": ["src/naive_gumball_machine", "tests/naive_gumball_machine"],
       "NaiveGumballMachineState\\": ["src/naive_gumball_machine/state"],
       "State\\": ["src/state", "tests/state"]
     }
   },
   "require": {
-    "phpunit/php-code-coverage": "^6.1"
+    "phpunit/php-code-coverage": "^6.1",
+    "ext-readline": "*"
   }
 }
