--- a/lw9/package.json
+++ b/lw9/package.json
@@ -4,9 +4,15 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@types/chart.js": "^2.7.53",
+    "@types/jest": "^24.0.13",
+    "@types/node": "^12.0.7",
+    "@types/react": "^16.8.19",
+    "@types/react-dom": "^16.8.4",
     "bootstrap": "^3.4.1",
     "chart.js": "^2.8.0",
-    "jquery": "^3.4.1"
+    "jquery": "^3.4.1",
+    "typescript": "^3.5.1"
   },
   "devDependencies": {
     "@types/bootstrap": "^4.3.0",
